# asminterpreter

./: README.md
interpreter/: CMakeLists.txt  interpreter.cpp
interpreter/lib/ds/: ds_stack.cpp  ds_stack.h
interpreter/src/: sm_state_machine.cpp  sm_state_machine.h  tp_tokenizer_parser.cpp  tp_tokenizer_parser.h
interpreter/test/: factorial.asm  test_factorial_code.cpp  test_factorial_code.h  test_factorial_code0.asm  test_factorial_code1.asm  test_factorial_code10.asm  test_factorial_code2.asm  test_factorial_code3.asm  test_factorial_code6.asm  test_state_machine.cpp  test_state_machine.h  test_state_machine1.asm  test_state_machine2.asm  test_state_machine3.asm  test_state_machine4.asm  test_state_machine5.asm
